--- a/templates/home.html
+++ b/templates/home.html
@@ -40,5 +40,11 @@
         
         <button type="submit">Submit</button>
     </form>
+    <hr>
+    
+    <h2>Quick Access</h2>
+    <form action="{{ url_for('portfolio') }}" method="get">
+        <button type="submit">Go to Portfolio</button>
+    </form>
 </body>
 </html>
